fixing logo size on mobile again

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -259,8 +259,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .logoHeader {
-    max-height: 90%;
-    max-width: 90%;
+    max-height: 70%;
+    max-width: 70%;
 }
 
 .fill {
